Tue Sep  4 09:15:00 2001  Joe Hoffert  <joeh@cs.wustl.edu>

	* tests/Pthreads_Test.c: 
	  Moved PACE_UNUSED_ARG to after declaration of variables.

Tue Sep  4 08:55:02 2001  Joe Hoffert  <joeh@cs.wustl.edu>

	* tests/Cond_Var_Test.c: 
	  Added test for condition variables.

Tue Sep  4 08:36:13 2001  Joe Hoffert  <joeh@cs.wustl.edu>

	* tests/vxworks_stub.c: 
	  Added call to pacevx_vxworks_init to initialize the
	  main thread.

	* tests/Pthreads_Test.c (main): 
	  Moved PACE_UNUSED_ARG to beginning of main.

	* tests/Makefile: 
	  Makefile doesn't build Posix_SP_Test on VxWorks. The
	  test doesn't compile (which is actually the test for
	  certain #defines).

	* pace/pthread.h: 
	  Added #define PACE_PTHREAD_MUTEX_INITIALIZER 
	  PTHREAD_MUTEX_INITIALIZER

Fri Aug 31 16:48:10 2001  Joe Hoffert  <joeh@cs.wustl.edu>

	* pace/vxworks/types.h: 
	  Removed extraneous blank lines.

	* pace/vxworks/pthread.inl: 
	  Cleaned up comment for popping cleanup routines.

	* pace/vxworks/pthread.c: 
	  Removed duplicate code (for C and C++) and fixed
	  VxWorks unld errors by making the main thread detached
	  and unregistering the cleanup function when the
	  last non-main thread is done.

	* pace/vxworks/pthread.h: 
	  Added PACE_PTHREAD_MUTEX_INITIALIZER initializer.

Fri Aug 24 08:24:43 2001  Joe Hoffert  <joeh@cs.wustl.edu>

	* pace/vxworks/stdio.inl: 
	* pace/vxworks/pthread.c: 
	  Added spaces between function name and argument list
	  for some functions since fuzz was complaining about
	  it.

Wed Aug 22 12:30:25 2001  Joe Hoffert  <joeh@cs.wustl.edu>

	* pace/win32/pace_lib.dsp: 
	  Added #define PACE_AS_STATIC_LIBS to static debug
	  build be consistent with ACE and TAO project files.
	  It was mistakenly just added for the static release
	  build previously.

Wed Aug 22 12:16:30 2001  Joe Hoffert  <joeh@cs.wustl.edu>

	* pace/win32/pace_lib.dsp: 
	  Added #define PACE_AS_STATIC_LIBS to be consistent
	  with ACE and TAO project files.

	* pace/win32/pace_dll.dsp: 